[package]
name = "sunset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunset-macro = { path = "./sunset-macro" }
detours-sys = { git = "https://github.com/svark/detours.git", rev = "040bf24", features  = ["buildtime_bindgen"] }
zydis = { version = "4.0.0-beta.2", features = ["encoder"] }
windows-sys = {version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader","Win32_System_Diagnostics_Debug","Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"]}
once_cell = "1.18.0"
